[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sunbird"
version = "0.1.0"
authors = [
  { name = "Wyatt Avilla"}
]
dependencies = [
  "kaggle==1.6.17",
  "tree-sitter==0.23.0",
  "tree-sitter-language-pack==0.2.0",
]

[project.optional-dependencies]
dev = [
  "pre-commit==3.8.0",
  "ruff==0.6.3",
  "mypy==1.11.2",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["CPY", "D", "E501", "PERF203", "S301", "S603", "S607", "T20"]

