[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sunbird"
version = "0.1.0"
authors = [
  { name = "Wyatt Avilla"}
]
dependencies = [
  "kaggle==1.6.17",
  "tree-sitter==0.23.0",
  "tree-sitter-language-pack==0.2.0",
  "notebook==7.2.2",
  "torch==2.4.1",
  "numpy==2.1.1",
]

[project.optional-dependencies]
dev = [
  "pre-commit==3.8.0",
  "ruff==0.6.3",
  "mypy==1.11.2",
  "nbqa==1.9.0",
  "types-tqdm==4.66.0.20240417",
  "torch==2.4.1",
]

[tool.setuptools]
py-modules = []

[tool.ruff.lint]
select = ["ALL"]
ignore = ["CPY", "D", "E501", "PERF203", "S301", "S603", "S607", "T20"]
